--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <main id="app"></main>
 
-  <script src="js/app.js" defer></script>
-  <script src="js/formValidation.js" defer></script>
-  <script src="js/storage.js" defer></script>
-  <script src="js/events.js" defer></script>
+  <script src="app.js" defer></script>
+  <script src="formValidation.js" defer></script>
+  <script src="storage.js" defer></script>
+  <script src="events.js" defer></script>
 </body>
 </html>
