--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="header-container">
-      <img src="img/logo.png" alt="Logo da ONG Patas da Esperança" class="logo" />
+      <img src="logo.png" alt="Logo da ONG Patas da Esperança" class="logo" />
       <h1>Patas da Esperança</h1>
     </div>
     <nav>
