--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Patas da Esperança</title>
   <link rel="stylesheet" href="style.css" />
+<button onclick="toggleDarkMode()" class="modo-contraste">Modo Escuro / Alto Contraste</button>
 </head>
 <body>
   <header>
