--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
   <script src="formValidation.js" defer></script>
   <script src="storage.js" defer></script>
   <script src="events.js" defer></script>
+  <script>function toggleDarkMode() {
+    document.body.classList.toggle("dark-mode");
+  }
+</script>
 </body>
 </html>
